--- a/GoodPT/board/templates/board/question_form.html
+++ b/GoodPT/board/templates/board/question_form.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% block content %}
-<div class="container">
+<div class="container" style="margin-top: 150px">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
     <form method="post" class="post-form my-3">
         {% csrf_token %} {% include "form_errors.html" %}
