--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -1,10 +1,34 @@
 {% extends "layout.html" %}
 {% load board_filter %}
 {% block content %}
-<div class="container my-3" id="#qna_board">
-    <table class="table" style="margin-top: 150px">
+<style>
+    #qnaboard {
+    background-color: #6671a4;
+    color: white;
+}
+
+</style>
+<div class="container my-3">
+    <div class="row my-3" >
+        <div class="col-6" style="margin-top: 150px">
+            {% if user.is_authenticated %}
+            <a href="{% url 'board:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+            {% else %}
+            <a class="btn btn-primary" href="/login">로그인 후 이용가능</a>
+            {% endif %}
+        </div>
+        <div class="col-6" style="margin-top: 150px">
+            <div class="input-group">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw|default_if_none:'' }}">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <table class="table">
         <thead>
-        <tr class="text-center table-primary">
+        <tr class="text-center" id="qnaboard">
             <th>No.</th>
             <th style="width:50%">Question</th>
             <th>user</th>
@@ -41,7 +65,8 @@
         <!-- 이전페이지 -->
         {% if question_list.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.previous_page_number }}">이전</a>
+            <a class="page-link" data-page="{{ question_list.previous_page_number }}"
+           href="javascript:void(0)">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -53,11 +78,13 @@
         {% if page_number >= question_list.number|add:-5 and page_number <= question_list.number|add:5 %}
         {% if page_number == question_list.number %}
         <li class="page-item active" aria-current="page">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            <a class="page-link" data-page="{{ page_number }}"
+           href="javascript:void(0)">{{ page_number }}</a>
         </li>
         {% else %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            <a class="page-link" data-page="{{ page_number }}"
+           href="javascript:void(0)">{{ page_number }}</a>
         </li>
         {% endif %}
         {% endif %}
@@ -65,7 +92,8 @@
         <!-- 다음페이지 -->
         {% if question_list.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ question_list.next_page_number }}">다음</a>
+            <a class="page-link" data-page="{{ question_list.next_page_number }}"
+           href="javascript:void(0)">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -74,10 +102,26 @@
         {% endif %}
     </ul>
     <!-- 페이징처리 끝 -->
-    {% if user.is_authenticated %}
-    <a href="{% url 'board:question_create' %}" class="btn btn-primary">질문 등록하기</a>
-    {% else %}
-    <a class="btn btn-primary" href="/login">로그인 후 이용가능</a>
-    {% endif %}
 </div>
+<form id="searchForm" method="get" action="{% url 'board:index' %}">
+    <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
+    <input type="hidden" id="page" name="page" value="{{ page }}">
+</form>
+{% endblock %}
+{% block script %}
+<script type='text/javascript'>
+const page_elements = document.getElementsByClassName("page-link");
+Array.from(page_elements).forEach(function(element) {
+    element.addEventListener('click', function() {
+        document.getElementById('page').value = this.dataset.page;
+        document.getElementById('searchForm').submit();
+    });
+});
+const btn_search = document.getElementById("btn_search");
+btn_search.addEventListener('click', function() {
+    document.getElementById('kw').value = document.getElementById('search_kw').value;
+    document.getElementById('page').value = 1;  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+    document.getElementById('searchForm').submit();
+});
+</script>
 {% endblock %}
