--- a/GoodPT/static/camera.css
+++ b/GoodPT/static/camera.css
@@ -7,6 +7,7 @@
     flex-direction: column;    
     align-items: center;    
     justify-content: center;
+    margin-top : 150px;
 } 
 
 .video-container {    
@@ -21,7 +22,22 @@
 }
 
 .video-item > video {    
-    border: 1px solid red;    
-    width: 250px;    
-    height: 188px;
+    border: 1px solid gray;    
+    width: 518px;
+    height : 388.9px;    
 }
+
+#button-record-image, #button-stop-image, #button-play-image{
+    width : 40px;
+    height : 40px;
+}
+
+.record-button, .stop-button, .play-button{
+    background-color: white;
+    border: none; 
+}
+
+.stop-button, .play-button{
+    display : none;
+}
+
